; ModuleID = '/home/carl/AnghaBench/nanomsg/src/transports/ws/extr_sws.c_nn_sws_init.c'
source_filename = "/home/carl/AnghaBench/nanomsg/src/transports/ws/extr_sws.c_nn_sws_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nn_sws = type { i32, i32, i32, i64, i64, i64, i64, i64, i32, i64, i32, i32, i32, %struct.TYPE_2__, i32*, i32, i32, i32 }
%struct.TYPE_2__ = type { i32, i32* }
%struct.nn_ep = type { i32 }
%struct.nn_fsm = type { i32 }

@nn_sws_handler = common dso_local global i32 0, align 4
@nn_sws_shutdown = common dso_local global i32 0, align 4
@NN_SWS_STATE_IDLE = common dso_local global i32 0, align 4
@NN_SWS_SRC_HANDSHAKE = common dso_local global i32 0, align 4
@nn_sws_pipebase_vfptr = common dso_local global i32 0, align 4
@NN_SWS_UTF8_MAX_CODEPOINT_LEN = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @nn_sws_init(%struct.nn_sws* %0, i32 %1, %struct.nn_ep* %2, %struct.nn_fsm* %3) #0 {
  %5 = alloca %struct.nn_sws*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.nn_ep*, align 8
  %8 = alloca %struct.nn_fsm*, align 8
  store %struct.nn_sws* %0, %struct.nn_sws** %5, align 8
  store i32 %1, i32* %6, align 4
  store %struct.nn_ep* %2, %struct.nn_ep** %7, align 8
  store %struct.nn_fsm* %3, %struct.nn_fsm** %8, align 8
  %9 = load %struct.nn_sws*, %struct.nn_sws** %5, align 8
  %10 = getelementptr inbounds %struct.nn_sws, %struct.nn_sws* %9, i32 0, i32 15
  %11 = load i32, i32* @nn_sws_handler, align 4
  %12 = load i32, i32* @nn_sws_shutdown, align 4
  %13 = load i32, i32* %6, align 4
  %14 = load %struct.nn_sws*, %struct.nn_sws** %5, align 8
  %15 = load %struct.nn_fsm*, %struct.nn_fsm** %8, align 8
  %16 = call i32 @nn_fsm_init(i32* %10, i32 %11, i32 %12, i32 %13, %struct.nn_sws* %14, %struct.nn_fsm* %15)
  %17 = load i32, i32* @NN_SWS_STATE_IDLE, align 4
  %18 = load %struct.nn_sws*, %struct.nn_sws** %5, align 8
  %19 = getelementptr inbounds %struct.nn_sws, %struct.nn_sws* %18, i32 0, i32 17
  store i32 %17, i32* %19, align 8
  %20 = load %struct.nn_sws*, %struct.nn_sws** %5, align 8
  %21 = getelementptr inbounds %struct.nn_sws, %struct.nn_sws* %20, i32 0, i32 16
  %22 = load i32, i32* @NN_SWS_SRC_HANDSHAKE, align 4
  %23 = load %struct.nn_sws*, %struct.nn_sws** %5, align 8
  %24 = getelementptr inbounds %struct.nn_sws, %struct.nn_sws* %23, i32 0, i32 15
  %25 = call i32 @nn_ws_handshake_init(i32* %21, i32 %22, i32* %24)
  %26 = load %struct.nn_sws*, %struct.nn_sws** %5, align 8
  %27 = getelementptr inbounds %struct.nn_sws, %struct.nn_sws* %26, i32 0, i32 14
  store i32* null, i32** %27, align 8
  %28 = load %struct.nn_sws*, %struct.nn_sws** %5, align 8
  %29 = getelementptr inbounds %struct.nn_sws, %struct.nn_sws* %28, i32 0, i32 13
  %30 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %29, i32 0, i32 0
  store i32 -1, i32* %30, align 8
  %31 = load %struct.nn_sws*, %struct.nn_sws** %5, align 8
  %32 = getelementptr inbounds %struct.nn_sws, %struct.nn_sws* %31, i32 0, i32 13
  %33 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %32, i32 0, i32 1
  store i32* null, i32** %33, align 8
  %34 = load %struct.nn_sws*, %struct.nn_sws** %5, align 8
  %35 = getelementptr inbounds %struct.nn_sws, %struct.nn_sws* %34, i32 0, i32 12
  %36 = load %struct.nn_ep*, %struct.nn_ep** %7, align 8
  %37 = call i32 @nn_pipebase_init(i32* %35, i32* @nn_sws_pipebase_vfptr, %struct.nn_ep* %36)
  %38 = load %struct.nn_sws*, %struct.nn_sws** %5, align 8
  %39 = getelementptr inbounds %struct.nn_sws, %struct.nn_sws* %38, i32 0, i32 0
  store i32 -1, i32* %39, align 8
  %40 = load %struct.nn_sws*, %struct.nn_sws** %5, align 8
  %41 = getelementptr inbounds %struct.nn_sws, %struct.nn_sws* %40, i32 0, i32 11
  %42 = call i32 @nn_list_init(i32* %41)
  %43 = load %struct.nn_sws*, %struct.nn_sws** %5, align 8
  %44 = getelementptr inbounds %struct.nn_sws, %struct.nn_sws* %43, i32 0, i32 1
  store i32 -1, i32* %44, align 4
  %45 = load %struct.nn_sws*, %struct.nn_sws** %5, align 8
  %46 = getelementptr inbounds %struct.nn_sws, %struct.nn_sws* %45, i32 0, i32 10
  %47 = call i32 @nn_msg_init(i32* %46, i32 0)
  %48 = load %struct.nn_sws*, %struct.nn_sws** %5, align 8
  %49 = getelementptr inbounds %struct.nn_sws, %struct.nn_sws* %48, i32 0, i32 9
  store i64 0, i64* %49, align 8
  %50 = load %struct.nn_sws*, %struct.nn_sws** %5, align 8
  %51 = getelementptr inbounds %struct.nn_sws, %struct.nn_sws* %50, i32 0, i32 8
  %52 = load i32, i32* %51, align 8
  %53 = load i32, i32* @NN_SWS_UTF8_MAX_CODEPOINT_LEN, align 4
  %54 = call i32 @memset(i32 %52, i32 0, i32 %53)
  %55 = load %struct.nn_sws*, %struct.nn_sws** %5, align 8
  %56 = getelementptr inbounds %struct.nn_sws, %struct.nn_sws* %55, i32 0, i32 7
  store i64 0, i64* %56, align 8
  %57 = load %struct.nn_sws*, %struct.nn_sws** %5, align 8
  %58 = getelementptr inbounds %struct.nn_sws, %struct.nn_sws* %57, i32 0, i32 6
  store i64 0, i64* %58, align 8
  %59 = load %struct.nn_sws*, %struct.nn_sws** %5, align 8
  %60 = getelementptr inbounds %struct.nn_sws, %struct.nn_sws* %59, i32 0, i32 5
  store i64 0, i64* %60, align 8
  %61 = load %struct.nn_sws*, %struct.nn_sws** %5, align 8
  %62 = getelementptr inbounds %struct.nn_sws, %struct.nn_sws* %61, i32 0, i32 4
  store i64 0, i64* %62, align 8
  %63 = load %struct.nn_sws*, %struct.nn_sws** %5, align 8
  %64 = getelementptr inbounds %struct.nn_sws, %struct.nn_sws* %63, i32 0, i32 3
  store i64 0, i64* %64, align 8
  %65 = load %struct.nn_sws*, %struct.nn_sws** %5, align 8
  %66 = getelementptr inbounds %struct.nn_sws, %struct.nn_sws* %65, i32 0, i32 2
  %67 = call i32 @nn_fsm_event_init(i32* %66)
  ret void
}

declare dso_local i32 @nn_fsm_init(i32*, i32, i32, i32, %struct.nn_sws*, %struct.nn_fsm*) #1

declare dso_local i32 @nn_ws_handshake_init(i32*, i32, i32*) #1

declare dso_local i32 @nn_pipebase_init(i32*, i32*, %struct.nn_ep*) #1

declare dso_local i32 @nn_list_init(i32*) #1

declare dso_local i32 @nn_msg_init(i32*, i32) #1

declare dso_local i32 @memset(i32, i32, i32) #1

declare dso_local i32 @nn_fsm_event_init(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
